@@ -1,5 +1,7 @@
 3.1.1
 
+- added stereo audio channel support
+
 - added input/output audio channel mapping for ASIO audio interface
 
 
